[package]
name = "sendit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_transfer = "0.1.1"
smolapps = "0.1.4"
clap = "3.1.1"
http-server = "0.7.0"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
libp2p = "0.43.0"
